@@ -52,3 +52,4 @@
 - Converted sample's relations to csv
 - Deb postinstall generates optimized files, this will increase loading speed
 - Relation module has SQL-like delete
+- Relation module has SQL-like update
